logs/django-jqmobile.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_jqmobile-0.1.egg-info'...
Listing './lib/python3.5/site-packages/jqmobile'...
Compiling './lib/python3.5/site-packages/jqmobile/models.py'...
***   File "./lib/python3.5/site-packages/jqmobile/models.py", line 56
    except SyntaxError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jqmobile/resolvers.py'...
***   File "./lib/python3.5/site-packages/jqmobile/resolvers.py", line 20
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jqmobile/templates'...
Listing './lib/python3.5/site-packages/jqmobile/templates/jqmobile'...
Compiling './lib/python3.5/site-packages/jqmobile/validators.py'...
***   File "./lib/python3.5/site-packages/jqmobile/validators.py", line 19
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
